<resources>
    <string name="app_name">BMM4103ME</string>
    <string name="numberNameSurname">201913709082\nMurat Sancak</string>

    <string name="counter">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="settings">Settings</string>

    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>

    <string name="upperLimitMinusButton">UpperLimitMinusButton</string>
    <string name="lowerLimitMinusButton">LowerLimitMinusButton</string>
    <string name="upperLimitPlusButton">UpperLimitPlusButton</string>
    <string name="lowerLimitPlusButton">LowerLimitPlusButton</string>

    <string name="calculatorImage">CalculatorImage</string>
    <string name="ac">AC</string> <!-- AC: All Clear -->
    <string name="c">C</string> <!-- C: Clear -->
    <string name="x">x</string>
    <string name="slash">/</string>
    <string name="equal">=</string>
    <string name="factorial">X!</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>

    <string name="mode">modeImageButton</string>
</resources>